# seu-injection-framework

./: .gitattributes  .gitignore  .ruff.toml  AGENTS.md  AI_AGENT_GUIDE.md  CHANGELOG.md  CLEANUP_COMPLETE.md  COMPREHENSIVE_CHANGES_SUMMARY.md  CONTRIBUTING.md  COVERAGE_FIX_SUMMARY.md  DOCS_REVIEW_COMPLETE.md  Dockerfile  Example_Attack_Notebook.ipynb  MARKDOWN_CLEANUP_FINAL.md  OVERHEAD_TRACKER.md  PIPELINE_FIX_URGENT.md  PRODUCTION_READINESS_PLAN.md  README.md  UV_SETUP.md  pyproject.toml  pytorch_11_requirements.txt  pytorch_requirements.txt  requirements.txt  ruff.toml  run.bat  run_overnight.bat  run_tests.py  validate_tests.py  versions_and_plan.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  research_question.yml
.github/workflows/: README.md  block-dev-docs-changes.yml  ci.yml  dependencies.yml  docs.yml  pylint.yml  python-tests.yml  release.yml  sync-issues.yml  test-matrix.yml
.review-output/: prompt_api.md  prompt_logic.md  prompt_security.md  prompt_style.md  prompt_tests.md  result_api.md  result_logic.md  result_security.md  result_style.md  result_tests.md
Research/: CNN.py  Current_Results.csv  attacking_vit.ipynb  dataset_imagenet1k.py  graph_generation.ipynb  index_calculations.ipynb  results.py  results_analysis.ipynb  results_analysis_final deltas v2.ipynb  results_analysis_final deltas.ipynb  results_analysis_final.ipynb  shipsnet copy.ipynb  shipsnet.ipynb  stopwatch.py  training_vit.ipynb  vit.ipynb  vit_imagenet1k_attacking.py  vit_imagenet1k_attacking_v1.py  vit_imagenet1k_attacking_will_edit.py  vit_imagenet1k_attacking_will_edit_cauchy.py  vit_imagenet1k_val.py  vit_structure.ipynb
Research/results/: results_idx0_2025-06-17_10-48-44.json  results_idx0_2025-06-17_22-53-24.json  results_idx0_2025-06-18_19-32-53.json  results_idx0_2025-06-26_15-17-51.json  results_idx0_2025-06-27_14-59-19.json  results_idx0_2025-06-27_14-59-26.json  results_idx0_2025-06-29_16-36-57.json  results_idx10_2025-06-20_00-03-44.json  results_idx10_2025-06-20_17-42-03.json  results_idx10_2025-06-21_13-16-14.json  results_idx10_2025-06-29_16-39-21.json  results_idx15_2025-06-20_00-06-59.json  results_idx15_2025-06-20_17-41-37.json  results_idx15_2025-06-21_13-10-11.json  results_idx15_2025-06-29_16-38-37.json  results_idx1_2025-06-16_18-49-15.json  results_idx1_2025-06-17_10-36-26.json  results_idx1_2025-06-17_22-49-18.json  results_idx1_2025-06-18_19-33-27.json  results_idx1_2025-06-26_04-25-08.json  results_idx1_2025-06-27_14-59-21.json  results_idx1_2025-06-27_14-59-41.json  results_idx1_2025-06-29_16-39-14.json  results_idx21_2025-06-19_23-52-21.json  results_idx21_2025-06-20_17-39-52.json  results_idx21_2025-06-21_13-10-10.json  results_idx21_2025-06-29_16-37-42.json  results_idx3_2025-06-17_10-27-25.json  results_idx3_2025-06-18_08-35-25.json  results_idx3_2025-06-19_05-43-26.json  results_idx3_2025-06-29_16-39-42.json  results_idx3_2025-06-30_01-04-12.json  results_idx5_2025-06-17_10-32-08.json  results_idx5_2025-06-18_08-35-00.json  results_idx5_2025-06-19_05-43-28.json  results_idx6_2025-06-20_00-20-58.json  results_idx6_2025-06-20_17-52-42.json  results_idx6_2025-06-21_13-18-09.json  results_idx6_2025-06-29_16-39-42.json  shipsnet_relu0_cnn.gzip  (+2 more)
Research/results_delta_2025-06-28/: results_delta0.001_2025-06-27_21-57-35.json  results_delta0.001_2025-06-27_21-58-09.json  results_delta0.001_2025-06-27_21-58-44.json  results_delta0.001_2025-06-27_21-59-20.json  results_delta0.001_2025-06-27_21-59-57.json  results_delta0.001_2025-06-27_22-00-37.json  results_delta0.001_2025-06-27_22-01-20.json  results_delta0.001_2025-06-27_22-02-30.json  results_delta0.001_2025-06-27_22-03-45.json  results_delta0.001_2025-06-27_22-04-54.json  results_delta0.001_2025-06-27_22-06-01.json  results_delta0.001_2025-06-27_22-07-07.json  results_delta0.001_2025-06-27_22-08-13.json  results_delta0.001_2025-06-27_22-09-23.json  results_delta0.001_2025-06-27_22-10-37.json  results_delta0.001_2025-06-27_22-11-50.json  results_delta0.001_2025-06-27_22-13-02.json  results_delta0.001_2025-06-27_22-14-15.json  results_delta0.001_2025-06-27_22-15-27.json  results_delta0.001_2025-06-27_22-16-38.json  results_delta0.001_2025-06-27_22-17-49.json  results_delta0.001_2025-06-27_22-19-02.json  results_delta0.001_2025-06-27_22-20-14.json  results_delta0.001_2025-06-27_22-21-25.json  results_delta0.001_2025-06-27_22-22-37.json  results_delta0.001_2025-06-27_22-23-47.json  results_delta0.001_2025-06-27_22-24-59.json  results_delta0.001_2025-06-27_22-26-10.json  results_delta0.001_2025-06-27_22-27-19.json  results_delta0.001_2025-06-27_22-28-28.json  results_delta0.001_2025-06-27_22-29-39.json  results_delta0.001_2025-06-27_22-30-48.json  results_delta0.001_2025-06-27_22-31-58.json  results_delta0.001_2025-06-27_22-33-08.json  results_delta0.001_2025-06-27_22-34-19.json  (+1029 more)
dev_docs/: test.md
docs/: AI_AGENT_GUIDE.md  GITHUB_PAGES_SETUP.md  KNOWN_ISSUES.md  Makefile  NEXT_STEPS.md  PRODUCTION_READINESS_PLAN.md  README.md  REPOSITORY_REVIEW_COMPLETE.md  USER_EXPERIENCE_IMPROVEMENT_PLAN.md  installation.md  overhead_measurement.md  quickstart.md
examples/: Example_Attack_Notebook.ipynb  FAULT_INJECTION_TRAINING_README.md  README.md  RESEARCH_SUMMARY.md  architecture_comparison.py  basic_cnn_robustness.py  fault_injection_training_robustness.ipynb  fault_injection_training_study.py  overhead_calculation_example.py  robustness_results.csv
framework/: __init__.py  attack.py  bitflip.py  criterion.py
injection-framework/: bitflips.py
literature/: README.md  VERIFICATION.md  bibliography.yaml
testing/: README.md  Testing.ipynb  __init__.py  example_networks.py  model_split_tests.ipynb  model_split_tests_vit.ipynb  model_splitter.py  model_splitter_vit.py  vibe_coding.ipynb
tests/: Testing.ipynb  __init__.py  benchmark.py  benchmark_results.jsonl  bitflips.ipynb  conftest.py  example_networks.py  test_bitflip.py  test_bitflip_coverage.py  test_bitflip_optimized.py  test_criterion.py  test_example_networks.py  test_injector.py  test_utils.py  testing.py  tests.py
(+2446 files in other folders)
